minor alignment fixes

--- a/vizro-core/src/vizro/static/css/bootstrap_overwrites.css
+++ b/vizro-core/src/vizro/static/css/bootstrap_overwrites.css
@@ -90,3 +90,8 @@ label[for="theme-selector"] {
 .dropdown {
   min-width: 160px;
 }
+
+.container-controls-panel .form-check-inline {
+  align-content: center;
+  height: 32px;
+}
